--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Haters.com</title>
+  </head>
+
+  <body>
+
+<h1> 
+     Welcome to you're all hater's.com
+</h1>
+
+
+
+
+    <h2>My Favorite Things in No Particular Order</h2>
+<ul>
+    <li>Coffee</li>
+    <li>Stopping the hate</li>
+    <li>getting money</li>
+</ul>
+
+    <h3>Top 5 people in this house</h3>
+<ol>
+    <li>Karl</li>
+    <li>Grand ma</li>
+    <li>Grace</li>
+    <li>Anika(kind of a hater)<img src="https://d1jyxxz9imt9yb.cloudfront.net/medialib/2195/image/p1300x1300/Buzz-Woody-koalas-MosswoodWildlife.webp" alt=">picture of Anika"></li>
+    <li>Ruby</li>
+</ol>
+
+<p> click here for <a href="https://www.racedayquads.com/collections/new-products">Dope drone site</a>
+</p>
+
+
+
+
+
+  </body>
+</html> 
+
+
